Introduce parameterized query attributes for GrantTypeSqlQueryBuilder to enhance security and flexibility in dynamic query construction. Tightened field ID validation in `SortOrderQueryBuilder`